--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "angular2-text-mask": "^9.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "ngx-toastr": "^13.2.0",
     "node": "^15.3.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
